2008-12-08  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=22737
        Try debug version when locating CFNetwork

        * platform/network/cf/ResourceRequestCFNet.cpp:
        (WebCore::findCFNetworkModule):
        (WebCore::findCFURLRequestSetContentDispositionEncodingFallbackArrayFunction):
        (WebCore::findCFURLRequestCopyContentDispositionEncodingFallbackArrayFunction):
        * platform/network/win/CookieJarCFNetWin.cpp:
        (WebCore::findCFNetworkModule):
        (WebCore::findIsHTTPOnlyFunction):

2008-12-08  Aaron Boodman  <aa@chromium.org>

        Reviewed by Stephanie Lewis.

        https://bugs.webkit.org/show_bug.cgi?id=22301
        Make dispatchDidFinishLoading() always fire before didFinishLoadForFrame().

        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::finishedParsing):

2008-12-08  Trenton Schulz <trenton.schulz@nokia.com>

        Rubber-stamped by Tor Arne Vestbø.

        Fix build warning on Mac

        * platform/text/mac/StringImplMac.mm:

2008-12-08  Simon Hausmann  <simon.hausmann@nokia.com>

        Fix the Qt build.

        * bridge/qt/qt_runtime.cpp:
        (JSC::Bindings::convertQVariantToValue): Pass JSGlobalData to RegExp
          constructor.

2008-12-08  Oliver Hunt  <oliver@apple.com>

        Reviewed by Alexey Proskuryakov.

        Bug 22398: r39059: Crash when clearing webkitTransitionDuration in webkitTransitionEnd event handler
        <rdar://problem/6426245> REGRESSION(r39059): Reproducible crash when clearing webkitTransitionDuration in webkitTransitionEnd event handler (22398)

        This regression was caused by r39059 replacing the protector on the active
        animation with a protector on just the composition.  It turns out that both
        protectors are necessary.

        Test: transitions/transition-duration-cleared-in-transitionend-crash.html

        * page/animation/AnimationBase.cpp: